<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/starting_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="181dp"
        android:layout_height="47dp"
        android:layout_marginTop="200dp"
        android:accessibilityLiveRegion="polite"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/starting_button"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="103dp"
        android:layout_height="28dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="85dp"
        android:layout_marginBottom="200dp"
        android:text="@string/check_box1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/starting_button" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="106dp"
        android:layout_height="27dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="85dp"
        android:layout_marginBottom="100dp"
        android:text="@string/check_box2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/starting_button" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="105dp"
        android:layout_height="28dp"
        android:layout_marginEnd="85dp"
        android:text="@string/check_box3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/starting_button" />

    <VideoView
        android:id="@+id/opening_video"
        android:layout_width="255dp"
        android:layout_height="220dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="500dp"
        app:layout_constraintBottom_toBottomOf="@+id/starting_button"
        app:layout_constraintEnd_toEndOf="@+id/starting_button"
        app:layout_constraintStart_toStartOf="@+id/starting_button"
        app:layout_constraintTop_toTopOf="@+id/starting_button" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="263dp"
        android:layout_height="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:text="@string/textView"
        app:layout_constraintBottom_toTopOf="@+id/starting_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/opening_video"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="119dp"
        android:layout_height="71dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="320dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/imageView2"
        app:layout_constraintBottom_toTopOf="@+id/opening_video"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/github" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="73dp"
        android:layout_height="72dp"
        android:layout_marginStart="270dp"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/imageView3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/starting_button"
        app:srcCompat="@drawable/hackers" />

</androidx.constraintlayout.widget.ConstraintLayout>