<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/question"
        android:layout_width="325dp"
        android:layout_height="106dp"
        android:layout_marginBottom="270dp"
        android:text="@string/question"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/hint"
        android:layout_width="325dp"
        android:layout_height="25dp"
        android:layout_marginBottom="400dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/hint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question" />

    <TextView
        android:id="@+id/answer"
        android:layout_width="325dp"
        android:layout_height="106dp"
        android:layout_marginBottom="250dp"
        android:text="@string/answer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hint" />

    <Button
        android:id="@+id/surrender"
        android:layout_width="133dp"
        android:layout_height="49dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="200dp"
        android:text="@string/surrender"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answer" />

    <TextView
        android:id="@+id/quit"
        android:layout_width="86dp"
        android:layout_height="19dp"
        android:layout_marginEnd="250dp"
        android:layout_marginBottom="100dp"
        android:text="@string/quit"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintBottom_toTopOf="@+id/question"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/submit"
        android:layout_width="113dp"
        android:layout_height="49dp"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/surrender"
        app:layout_constraintTop_toBottomOf="@+id/answer" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/search_button"
        android:layout_width="54dp"
        android:layout_height="49dp"
        android:layout_marginStart="275dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="650dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_search" />

</androidx.constraintlayout.widget.ConstraintLayout>